--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,8 @@ spring.application.name=questions
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/questions?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/questions?createDatabaseIfNotExist=true
 spring.datasource.username=user_quest
 spring.datasource.password=12Quest34
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-
 spring.data.jpa.repositories.enabled=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.database=mysql
-
-spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
