--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.username=user_quest
 spring.datasource.password=12Quest34
 spring.data.jpa.repositories.enabled=true
 spring.jpa.database=mysql
+
+spring.security.oauth2.client.registration.google.client-id=309438861197-ik15niq3rv5adu7gb15qosvp4udnr8td.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
