--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.database=mysql
 spring.security.oauth2.client.registration.google.client-id=309438861197-ik15niq3rv5adu7gb15qosvp4udnr8td.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
+
+springdoc.api-docs.path=/v1/questions/api-docs
