Swagger finished and favicon included

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.security.oauth2.client.registration.google.client-id=309438861197-ik15niq
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 
-springdoc.api-docs.path=/v1/questions/api-docs
+springdoc.swagger-ui.path=/api/question/doc
+springdoc.api-docs.path=/api/question/doc
+springdoc.swagger-ui.url=/api/question/doc
+springdoc.swagger-ui.disable-swagger-default-url=true
